# jolo

./: pyproject.toml
src/: train.py
src/jolo/data/: dataset.py
src/jolo/nn/: blocks.py  losses.py  model.py  optimizer.py  utils.py
src/jolo/utils/: box_utils.py
