[project]
name = "jolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yeyinthtoon", email = "includemylib@gmail.com" }
]
requires-python = ">=3.12.7"
dependencies = [
    "flax>=0.10.1",
    "jax[cuda12]>=0.4.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.7.2",
]
lint-extra = [
    "pylint>=3.3.1",
]
